crates/plotgram-layout/tests/snapshots/hierarchical_coordinates__fanout_port_anchor_coordinates.snap
---
source: crates/plotgram-layout/tests/hierarchical_coordinates.rs
expression: "layout_json(graph, Size::new(120.0, 40.0))"
---
{
  "edges": [
    {
      "from_port": {
        "along": {
          "Ordered": {
            "count": 3,
            "order": 0
          }
        },
        "side": "south"
      },
      "id": "e0",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 30.0,
              "y": 40.0
            },
            {
              "x": 30.0,
              "y": 60.0
            },
            {
              "x": 60.0,
              "y": 60.0
            },
            {
              "x": 60.0,
              "y": 96.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t0",
      "to_port": {
        "along": {
          "Ordered": {
            "count": 1,
            "order": 0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "Ordered": {
            "count": 3,
            "order": 1
          }
        },
        "side": "south"
      },
      "id": "e1",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 60.0,
              "y": 40.0
            },
            {
              "x": 60.0,
              "y": 76.0
            },
            {
              "x": 129.33333333333334,
              "y": 76.0
            },
            {
              "x": 129.33333333333334,
              "y": 156.0
            },
            {
              "x": 40.0,
              "y": 156.0
            },
            {
              "x": 40.0,
              "y": 192.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t1",
      "to_port": {
        "along": {
          "Ordered": {
            "count": 2,
            "order": 0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "Ordered": {
            "count": 3,
            "order": 2
          }
        },
        "side": "south"
      },
      "id": "e2",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 90.0,
              "y": 40.0
            },
            {
              "x": 90.0,
              "y": 60.0
            },
            {
              "x": 204.0,
              "y": 60.0
            },
            {
              "x": 204.0,
              "y": 96.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t2",
      "to_port": {
        "along": {
          "Ordered": {
            "count": 1,
            "order": 0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "Ordered": {
            "count": 1,
            "order": 0
          }
        },
        "side": "south"
      },
      "id": "e3",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 60.0,
              "y": 136.0
            },
            {
              "x": 60.0,
              "y": 172.0
            },
            {
              "x": 80.0,
              "y": 172.0
            },
            {
              "x": 80.0,
              "y": 192.0
            }
          ]
        }
      },
      "source": "t0",
      "target": "t1",
      "to_port": {
        "along": {
          "Ordered": {
            "count": 2,
            "order": 1
          }
        },
        "side": "north"
      }
    }
  ],
  "nodes": [
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 0.0,
        "y": 0.0
      },
      "id": "src"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 0.0,
        "y": 96.0
      },
      "id": "t0"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 0.0,
        "y": 192.0
      },
      "id": "t1"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 144.0,
        "y": 96.0
      },
      "id": "t2"
    }
  ]
}
